Add correct link to Dan's talk at #86, fix formatting

--- a/_posts/2014-12-15-86.html
+++ b/_posts/2014-12-15-86.html
@@ -42,14 +42,14 @@ twitter: <a href='https://twitter.com/prehensile'>@prehensile</a><br/>
 pixelpusher (AKA Evan Raskob)<br/>
 making sound into 3D printed objects of art: sound spirals<br/>
 <a href="http://pixelist.info">http://pixelist.info</a>
-<a href='https://twitter.com/evanraskob'>@evanraskob</a>
+<a href='https://twitter.com/evanraskob'>@evanraskob</a><br/>
 <br/>
 Giles & Wiseman<br/>
 Emilie Giles and Sarah Wiseman will present their work around eTextiles and<br/>
 accessibility in cultural spaces, including running workshops for young visually<br/>
 impaired people and creating eTextile based installations for immersive theatre.<br/>
 <a href="http://www.emiliegiles.co.uk/eTextiles-and-Touch-Based-Interaction-for-Accessibility">http://www.emiliegiles.co.uk/eTextiles-and-Touch-Based-Interaction-for-Accessibility</a>
-<a href='https://twitter.com/me_backwards'>@me_backwards</a> <a href='https://twitter.com/oopsohno'>@oopsohno</a>
+<a href='https://twitter.com/me_backwards'>@me_backwards</a> <a href='https://twitter.com/oopsohno'>@oopsohno</a><br/>
 <br/>
 Tom Wyatt<br/>
 How we spent a year turning a caravan into a spaceship<br/>
@@ -62,18 +62,18 @@ Electromagnetic Metatextiles: exploring experimental material manipulation<br/>
 techniques to achieve periodic textile surfaces for tasks required in<br/>
 Transformation Optic devices which are considered continuous and effective at<br/>
 specific frequency bands.<br/>
-<a href="http://beritgreinke.com/">http://beritgreinke.com/</a>
+<a href="http://beritgreinke.com/">http://beritgreinke.com/</a><br/>
 <br/>
 Dan Stowell<br/>
 A small project to establish some very important geofactoids about Britain<br/>
-<a href="http://www.mcld.co.uk/">http://www.mcld.co.uk/</a>
-<a href='https://twitter.com/mclduk'>@mclduk</a>
+<a href="http://www.mcld.co.uk/feet-from-a-rat">http://www.mcld.co.uk/feet-from-a-rat</a>
+<a href='https://twitter.com/mclduk'>@mclduk</a></br>
 <br/>
 Darren Mothersele / Cyril (Live Coding Visuals)<br/>
 What is live coding? where did Cyril come from? and improvised live coding<br/>
 performance.<br/>
 <a href="http://cyrilcode.com">http://cyrilcode.com</a>
-<a href='https://twitter.com/cyrilcode'>@cyrilcode</a>
+<a href='https://twitter.com/cyrilcode'>@cyrilcode</a><br/>
 <br/>
 +++ Open Dorks<br/>
 <br/>
